Style and write product copy

--- a/4-product-landing-page/index.html
+++ b/4-product-landing-page/index.html
@@ -22,7 +22,9 @@
 		<nav id="nav-bar">
 			<!-- you can see at least three clickable elements inside the nav element, each with the class nav-link -->
 			<!-- when you click a .nav-link button in the nav element, you are taken to the corresponding section of the landing page -->
-			<a href="#features" class="nav-link">Features</a>
+			<a href="#product-info" class="nav-link">Product Information</a>
+			<a href="#product-video" class="nav-link">Our Manufacturing Process</a>
+			<a href="#order" class="nav-link">Place an Order</a>
 		</nav>
 
 	</header>
@@ -39,8 +41,45 @@
 			<!-- create 3 product talking points -->
 			<!-- get an icon for each point -->
 			<div class="info-point">
-				<!-- img.point-icon -->
-				<!-- https://www.svgrepo.com/svg/324049/recycle-3?edit=true -->
+				<!-- https://www.svgrepo.com/svg/178384/swiss-army-knife-equipment -->
+				<svg class="point-icon" height="64px" width="64px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+					xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#000000">
+					<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+					<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+					<g id="SVGRepo_iconCarrier">
+						<path style="fill:#A3AAAF;"
+							d="M166.841,273.655L128,270.124l7.945-34.428l-34.428-7.945l8.828-36.193 c-26.483-15.007-56.497-22.952-87.393-22.952h-4.414l148.303,246.29v-99.752V273.655z">
+						</path>
+						<path style="fill:#E0E0E0;"
+							d="M361.048,105.931v183.614c31.779,37.959,75.917,71.503,132.414,72.386L361.048,105.931z"></path>
+						<path style="fill:#A3AAAF;"
+							d="M396.359,256c-3.531,0-6.179-1.766-7.945-5.297l-35.31-70.621c-1.766-4.414,0-9.71,3.531-11.476 c4.414-1.766,9.71,0,11.476,3.531l35.31,70.621c1.766,4.414,0,9.71-3.531,11.476C399.007,256,398.124,256,396.359,256">
+						</path>
+						<path style="fill:#DD342E;"
+							d="M263.945,512L263.945,512c-53.848,0-97.103-43.255-97.103-97.103V97.103 C166.841,43.255,210.097,0,263.945,0s97.103,43.255,97.103,97.103v317.793C361.048,468.745,317.793,512,263.945,512">
+						</path>
+						<g>
+							<path style="fill:#E0E0E0;"
+								d="M308.083,432.552c0-24.717-19.421-44.138-44.138-44.138s-44.138,19.421-44.138,44.138 s19.421,44.138,44.138,44.138S308.083,457.269,308.083,432.552">
+							</path>
+							<path style="fill:#E0E0E0;"
+								d="M308.083,79.448c0-24.717-19.421-44.138-44.138-44.138s-44.138,19.421-44.138,44.138 s19.421,44.138,44.138,44.138S308.083,104.166,308.083,79.448">
+							</path>
+						</g>
+						<path style="fill:#FFFFFF;"
+							d="M325.738,229.517h-35.31v-35.31h-52.966v35.31h-35.31v52.966h35.31v35.31h52.966v-35.31h35.31 V229.517z">
+						</path>
+					</g>
+				</svg>
+				<div class="point-text">
+					<h3 class="point-title" id="features">Multipurpose</h3>
+					<p class="point-desc">A plumbus is a gorgeous household or office accent piece that can also be used to clean,
+						heat, and record & play audio</p>
+				</div>
+			</div>
+
+			<div class="info-point">
+				<!-- https://www.svgrepo.com/svg/324049/recycle-3 -->
 				<svg class="point-icon" width="64px" height="64px" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"
 					fill="#000000">
 					<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -70,8 +109,96 @@
 						</g>
 					</g>
 				</svg>
-				<h3 class="point-title" id="features">Features</h3>
-				<p class="point-text">some text about the features idk</p>
+				<div class="point-text">
+					<h3 class="point-title" id="features">Environmentally Friendly</h3>
+					<p class="point-desc">100% of shleem used during manufacturing is recycled and reused</p>
+				</div>
+			</div>
+
+			<div class="info-point">
+				<!-- https://www.svgrepo.com/svg/178604/paint-brush-paint -->
+				<svg class="point-icon" height="64px" width="64px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+					xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#000000">
+					<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+					<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+					<g id="SVGRepo_iconCarrier">
+						<g transform="translate(-1)">
+							<path style="fill:#C17C3E;"
+								d="M142.265,194.207v79.448c0,19.421,15.89,35.31,35.31,35.31c9.71,0,17.655,7.945,16.772,17.655 l-7.062,166.841c0,9.71,7.945,18.538,17.655,18.538h104.166c9.71,0,17.655-7.945,17.655-18.538l-7.062-166.841 c0-9.71,7.062-17.655,16.772-17.655c19.421,0,35.31-15.89,35.31-35.31v-79.448H142.265z">
+							</path>
+							<g>
+								<path style="fill:#9E5A23;"
+									d="M283.506,432.552c0-15.007-11.476-26.483-26.483-26.483c-15.007,0-26.483,11.476-26.483,26.483 s11.476,26.483,26.483,26.483C272.03,459.034,283.506,446.676,283.506,432.552">
+								</path>
+								<path style="fill:#9E5A23;" d="M133.437,194.207H380.61v-79.448H133.437V194.207z"></path>
+							</g>
+							<path style="fill:#ECE8D8;"
+								d="M295.865,114.759h-0.883H142.265c0-44.138-5.297-74.152-15.89-94.455 C121.079,11.476,128.141,0,137.851,0h104.166c7.062,0,15.007,2.648,20.303,7.062c16.772,14.124,25.6,39.724,30.014,63.559 c2.648-8.828,7.062-18.538,11.476-27.366C318.817,16.772,350.596,0,381.492,0h7.945c-24.717,26.483-35.31,86.51-17.655,114.759 h-76.8">
+							</path>
+							<g>
+								<path style="fill:#9E5A23;"
+									d="M195.23,238.345c5.297,0,8.828-3.531,8.828-8.828s-3.531-8.828-8.828-8.828h-52.966v17.655H195.23z ">
+								</path>
+								<path style="fill:#9E5A23;"
+									d="M177.575,273.655c5.297,0,8.828-3.531,8.828-8.828c0-5.297-3.531-8.828-8.828-8.828h-35.31v17.655 H177.575z">
+								</path>
+							</g>
+						</g>
+					</g>
+				</svg>
+				<div class="point-text">
+					<h3 class="point-title" id="features">Fleed Rub Guarantee</h3>
+					<p class="point-desc">During manufacturing every fleeb is rubbed so that fleeb juice doesn't stain your home
+					</p>
+				</div>
+			</div>
+
+			<div class="info-point">
+				<!-- https://www.svgrepo.com/svg/246612/robot -->
+				<svg class="point-icon" height="64px" width="64px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+					xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#000000">
+					<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+					<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+					<g id="SVGRepo_iconCarrier">
+						<g>
+							<path style="fill:#707287;"
+								d="M137.909,114.051c-34.153,0-61.839,27.686-61.839,61.839l0,0c0,34.153,27.686,61.839,61.839,61.839 h17.194V114.051C155.103,114.051,137.909,114.051,137.909,114.051z">
+							</path>
+							<path style="fill:#707287;"
+								d="M374.091,114.051c34.153,0,61.839,27.686,61.839,61.839l0,0c0,34.153-27.686,61.839-61.839,61.839 h-17.194V114.051C356.897,114.051,374.091,114.051,374.091,114.051z">
+							</path>
+						</g>
+						<path style="fill:#C7CFE2;"
+							d="M369.047,465.793l-24.249-62.708l-0.002,0.005c-7.133-4.234-14.708-7.799-22.654-10.582l0,0 c-9.508-3.332-19.538-5.549-29.928-6.524v-65.916h-72.429v65.917c-9.958,0.933-19.586,2.999-28.738,6.103l-1.202,0.417 c-7.942,2.783-15.515,6.347-22.644,10.58l-24.249,62.708L167.2,512h177.598v-0.001L369.047,465.793z">
+						</path>
+						<path style="fill:#AFB6C7;"
+							d="M219.786,377.613c11.634,2.735,23.757,4.187,36.215,4.187c12.457,0,24.58-1.452,36.214-4.187v-57.544 h-72.429V377.613z">
+						</path>
+						<path style="fill:#C7CFE2;"
+							d="M255.999,0L255.999,0c-70.793,0-128.182,57.389-128.182,128.182v95.418 c0,70.792,57.389,128.182,128.182,128.182l0,0c70.792,0,128.182-57.389,128.182-128.182v-95.418C384.181,57.389,326.793,0,255.999,0 z">
+						</path>
+						<path style="fill:#5B5D6E;"
+							d="M348.158,114.051v95.418c0,50.816-41.342,92.159-92.159,92.159s-92.159-41.342-92.159-92.159v-95.418 H348.158z">
+						</path>
+						<path style="fill:#74D6FF;"
+							d="M255.999,255.283c-100.333-42.662-65.699-140.727,0-89.201 C321.699,114.555,356.334,212.622,255.999,255.283z">
+						</path>
+						<g>
+							<circle style="fill:#707287;" cx="332.155" cy="80.691" r="9.341"></circle>
+							<circle style="fill:#707287;" cx="296.133" cy="80.691" r="9.341"></circle>
+							<path style="fill:#707287;"
+								d="M167.202,403.086c-37.15,22.059-62.059,62.572-62.059,108.913l0,0h62.059V403.086z"></path>
+							<path style="fill:#707287;"
+								d="M344.798,403.086c37.15,22.059,62.059,62.572,62.059,108.913l0,0h-62.059V403.086z"></path>
+						</g>
+					</g>
+				</svg>
+				<div class="point-text">
+					<h3 class="point-title" id="features">Autonomous</h3>
+					<p class="point-desc">Your plumbus can move and clean around the house - even climb ladders - without owner
+						participation
+					</p>
+				</div>
 			</div>
 		</div>
 
@@ -95,6 +222,54 @@
 			<!-- https://rickandmorty.fandom.com/wiki/Plumbus -->
 
 		</div>
+
+		<div class="info-point" id="product-warning">
+			<!-- https://www.svgrepo.com/svg/178523/light-bulb-technology -->
+			<svg class="point-icon" height="64px" width="64px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+				xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#000000">
+				<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+				<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+				<g id="SVGRepo_iconCarrier">
+					<path style="fill:#F0CE49;"
+						d="M422.841,152.717C414.014,73.269,350.455,9.71,271.007,0.883C265.71,0.883,261.297,0,256,0 c-5.297,0-9.71,0-15.007,0.883C161.545,9.71,97.986,74.152,89.159,152.717c-6.179,56.497,15.007,107.697,52.083,143.007 c21.186,20.303,38.841,46.786,44.138,75.034h141.241c5.297-28.248,22.952-54.731,44.138-75.034 C407.834,260.414,429.021,209.214,422.841,152.717">
+					</path>
+					<path style="fill:#ED7161;"
+						d="M361.931,167.724c0,58.262-47.669,105.931-105.931,105.931s-105.931-47.669-105.931-105.931 S197.738,61.793,256,61.793S361.931,109.462,361.931,167.724">
+					</path>
+					<g>
+						<path style="fill:#FFFFFF;"
+							d="M256,211.862c-5.297,0-8.828-3.531-8.828-8.828V97.103c0-5.297,3.531-8.828,8.828-8.828 c5.297,0,8.828,3.531,8.828,8.828v105.931C264.828,208.331,261.297,211.862,256,211.862">
+						</path>
+						<path style="fill:#FFFFFF;"
+							d="M256,247.172c-0.883,0-2.648,0-3.531-0.883c-0.883,0-1.766-0.883-2.648-1.766 c-0.883-0.883-1.766-1.766-1.766-2.648c-0.883-0.883-0.883-2.648-0.883-3.531c0-2.648,0.883-4.414,2.648-6.179 c3.531-3.531,8.828-3.531,12.359,0c1.766,1.766,2.648,3.531,2.648,6.179c0,0.883,0,2.648-0.883,3.531 c0,0.883-0.883,1.766-1.766,2.648c-0.883,0.883-1.766,1.766-2.648,1.766C258.648,247.172,256.883,247.172,256,247.172">
+						</path>
+					</g>
+					<path style="fill:#E8EDEE;" d="M185.379,370.759V476.69h141.241v-70.621v-35.31H185.379z"></path>
+					<g>
+						<path style="fill:#CBD4D8;"
+							d="M269.241,512h-26.483c-7.945,0-15.89-3.531-21.186-10.593l-18.538-24.717h105.931l-18.538,24.717 C285.131,508.469,277.186,512,269.241,512">
+						</path>
+						<path style="fill:#CBD4D8;"
+							d="M247.172,414.897c5.297,0,8.828-3.531,8.828-8.828s-3.531-8.828-8.828-8.828h-61.793v17.655H247.172 z">
+						</path>
+						<path style="fill:#CBD4D8;"
+							d="M220.69,450.207c5.297,0,8.828-3.531,8.828-8.828s-3.531-8.828-8.828-8.828h-35.31v17.655H220.69z">
+						</path>
+						<path style="fill:#CBD4D8;"
+							d="M326.621,397.241h-35.31c-5.297,0-8.828,3.531-8.828,8.828s3.531,8.828,8.828,8.828h35.31v-8.828 V397.241z">
+						</path>
+						<path style="fill:#CBD4D8;"
+							d="M264.828,432.552c-5.297,0-8.828,3.531-8.828,8.828s3.531,8.828,8.828,8.828h61.793v-17.655H264.828 z">
+						</path>
+					</g>
+				</g>
+			</svg>
+			<div class="point-text">
+				<h3 class="point-title" id="features">Environmentally Friendly</h3>
+				<p class="point-desc">100% of shleem used during manufacturing is recycled and reused</p>
+			</div>
+		</div>
+
 	</main>
 
 	<footer>
