--- a/4-product-landing-page/index.html
+++ b/4-product-landing-page/index.html
@@ -265,8 +265,9 @@
 				</g>
 			</svg>
 			<div class="point-text">
-				<h3 class="point-title" id="features">Environmentally Friendly</h3>
-				<p class="point-desc">100% of shleem used during manufacturing is recycled and reused</p>
+				<h3 class="point-title" id="features">Disclaimer</h3>
+				<p class="point-desc">Do <em>not</em> use a plumbus as a personal massager or sensory stimulator. Applying the
+					plumbus to sensory organs can cause trauma or death.</p>
 			</div>
 		</div>
 
