add and style product video

--- a/4-product-landing-page/index.html
+++ b/4-product-landing-page/index.html
@@ -205,7 +205,10 @@
 		<div class="product-video">
 			<!-- you can watch an embedded product video with id="video" -->
 			<!-- https://www.youtube.com/watch?v=eMJk4y9NGvE -->
-
+			<iframe width="698" height="393" src="https://www.youtube.com/embed/eMJk4y9NGvE"
+				title="Plumbus: How They Do It | Rick and Morty | Adult Swim" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+				allowfullscreen></iframe>
 		</div>
 
 		<div class="cta">
