--- a/4-product-landing-page/index.html
+++ b/4-product-landing-page/index.html
@@ -210,17 +210,22 @@
 		</div>
 
 		<div class="cta">
-			<!-- your landing page has a form element with a corresponding id="form" -->
-			<!-- within the form, there is an input field with id="email" where you can enter an email address -->
-			<!-- the #email input field should have placeholder text to let users know what the field is for -->
-			<!-- the #email input field uses html5 validation to confirm that the entered text is an email address -->
-			<!-- within the form, there is a submit input with a corresponding id="submit" -->
-			<!-- when you click the #submit element, the email is submitted to a static page (use this mock url: https://www.freecodecamp.com/email-submit) -->
-
 			<h3 class="cta-title">Request a quote</h3>
 			<p class="cta-desc">Plumbuses start at six-and-a-half Breeples</p>
 			<!-- how do I make a footnote to explain price is from rick&morty fan wiki -->
 			<!-- https://rickandmorty.fandom.com/wiki/Plumbus -->
+
+			<!-- your landing page has a form element with a corresponding id="form" -->
+			<form action="https://www.freecodecamp.com/email-submit" id="form">
+				<label for="customer-email">Email address to receive a quote</label>
+				<!-- within the form, there is an input field with id="email" where you can enter an email address -->
+				<!-- the #email input field should have placeholder text to let users know what the field is for -->
+				<!-- the #email input field uses html5 validation to confirm that the entered text is an email address -->
+				<input type="email" name="customer-email" id="email" placeholder="example@gmail.com" required>
+				<!-- within the form, there is a submit input with a corresponding id="submit" -->
+				<!-- when you click the #submit element, the email is submitted to a static page (use this mock url: https://www.freecodecamp.com/email-submit) -->
+				<input type="submit" value="Get a Quote" id="submit">
+			</form>
 
 		</div>
 
