fix navbar links

--- a/4-product-landing-page/index.html
+++ b/4-product-landing-page/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" href="https://fav.farm/%F0%9F%A6%A9" />
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;700&display=swap" rel="stylesheet" />
 </head>
 
 <body>
@@ -35,7 +36,7 @@
 			<img src="./plumbus_render.png" alt="render of the front and back of a plumbus" class="hero-img">
 		</div>
 
-		<div class="product-info">
+		<div class="product-info" id="product-info">
 			<!-- create 3 product talking points -->
 			<!-- get an icon for each point -->
 			<div class="info-point">
@@ -200,7 +201,7 @@
 			</div>
 		</div>
 
-		<div class="product-video">
+		<div class="product-video" id="product-video">
 			<!-- you can watch an embedded product video with id="video" -->
 			<!-- https://www.youtube.com/watch?v=eMJk4y9NGvE -->
 			<iframe id="video" width="698" height="393" src="https://www.youtube.com/embed/eMJk4y9NGvE"
@@ -209,7 +210,7 @@
 				allowfullscreen></iframe>
 		</div>
 
-		<div class="cta">
+		<div class="cta" id="order">
 			<h3 class="cta-title">Request a quote</h3>
 			<p class="cta-desc">Plumbuses start at six-and-a-half Breeples</p>
 			<!-- how do I make a footnote to explain price is from rick&morty fan wiki -->
