--- a/4-product-landing-page/index.html
+++ b/4-product-landing-page/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" href="https://fav.farm/%F0%9F%A6%A9" />
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;700&display=swap" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Salsa&display=swap" rel="stylesheet">
 </head>
 
 <body>
