spacing between sections

--- a/4-product-landing-page/index.html
+++ b/4-product-landing-page/index.html
@@ -38,6 +38,7 @@
 		</div>
 
 		<div class="product-info" id="product-info">
+			<div class='spacer'></div>
 			<!-- create 3 product talking points -->
 			<!-- get an icon for each point -->
 			<div class="info-point">
@@ -203,6 +204,7 @@
 		</div>
 
 		<div class="product-video" id="product-video">
+			<div class='spacer'></div>
 			<!-- you can watch an embedded product video with id="video" -->
 			<!-- https://www.youtube.com/watch?v=eMJk4y9NGvE -->
 			<iframe id="video" width="698" height="393" src="https://www.youtube.com/embed/eMJk4y9NGvE"
@@ -230,6 +232,7 @@
 			</form>
 
 		</div>
+		<div class='spacer'></div>
 
 		<div class="info-point" id="product-warning">
 			<!-- https://www.svgrepo.com/svg/178523/light-bulb-technology -->
@@ -280,6 +283,7 @@
 		</div>
 
 	</main>
+	<div class='spacer'></div>
 
 	<footer>
 		<p>plumbus icon by Michael Rachim from <a href="https://thenounproject.com/browse/icons/term/plumbus/"
