--- a/4-product-landing-page/index.html
+++ b/4-product-landing-page/index.html
@@ -24,16 +24,18 @@
 		<nav id="nav-bar">
 			<!-- you can see at least three clickable elements inside the nav element, each with the class nav-link -->
 			<!-- when you click a .nav-link button in the nav element, you are taken to the corresponding section of the landing page -->
-			<a href="#product-info" class="nav-link">Product Information</a>
-			<a href="#product-video" class="nav-link">Our Manufacturing Process</a>
-			<a href="#order" class="nav-link">Place an Order</a>
+			<a href="#product-info" class="nav-link">Product Info<span class="collapse">rmation</span></a>
+			<a href="#product-video" class="nav-link">
+				<span class="collapse">Our </span>Manufacturing<span class="collapse"> Process</span>
+			</a>
+			<a href="#order" class="nav-link"><span class="collapse">Place an </span>Order</a>
 		</nav>
 
 	</header>
 
 	<main>
 		<div class="hero">
-			<p class="hero-text">Everyone needs a plumbus in their home</p>
+			<p class="hero-text">Everyone needs<br>a plumbus<br>in their home</p>
 			<img src="./plumbus_render.png" alt="render of the front and back of a plumbus" class="hero-img">
 		</div>
 
@@ -43,8 +45,9 @@
 			<!-- get an icon for each point -->
 			<div class="info-point">
 				<!-- https://www.svgrepo.com/svg/178384/swiss-army-knife-equipment -->
-				<svg class="point-icon" height="64px" width="64px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-					xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#000000">
+				<svg class="point-icon collapse" height="64px" width="64px" version="1.1" id="Layer_1"
+					xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512"
+					xml:space="preserve" fill="#000000">
 					<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
 					<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
 					<g id="SVGRepo_iconCarrier">
@@ -81,8 +84,8 @@
 
 			<div class="info-point">
 				<!-- https://www.svgrepo.com/svg/324049/recycle-3 -->
-				<svg class="point-icon" width="64px" height="64px" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"
-					fill="#000000">
+				<svg class="point-icon collapse" width="64px" height="64px" viewBox="0 0 64 64"
+					xmlns="http://www.w3.org/2000/svg" fill="#000000">
 					<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
 					<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
 					<g id="SVGRepo_iconCarrier">
@@ -118,8 +121,9 @@
 
 			<div class="info-point">
 				<!-- https://www.svgrepo.com/svg/178604/paint-brush-paint -->
-				<svg class="point-icon" height="64px" width="64px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-					xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#000000">
+				<svg class="point-icon collapse" height="64px" width="64px" version="1.1" id="Layer_1"
+					xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512"
+					xml:space="preserve" fill="#000000">
 					<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
 					<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
 					<g id="SVGRepo_iconCarrier">
@@ -156,8 +160,9 @@
 
 			<div class="info-point">
 				<!-- https://www.svgrepo.com/svg/246612/robot -->
-				<svg class="point-icon" height="64px" width="64px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-					xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#000000">
+				<svg class="point-icon collapse" height="64px" width="64px" version="1.1" id="Layer_1"
+					xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512"
+					xml:space="preserve" fill="#000000">
 					<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
 					<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
 					<g id="SVGRepo_iconCarrier">
@@ -236,8 +241,9 @@
 
 		<div class="info-point" id="product-warning">
 			<!-- https://www.svgrepo.com/svg/178523/light-bulb-technology -->
-			<svg class="point-icon" height="64px" width="64px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-				xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#000000">
+			<svg class="point-icon collapse" height="64px" width="64px" version="1.1" id="Layer_1"
+				xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512"
+				xml:space="preserve" fill="#000000">
 				<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
 				<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
 				<g id="SVGRepo_iconCarrier">
